Solved problem external debug bar not showing properly

--- a/resources/assets/sass/login.scss
+++ b/resources/assets/sass/login.scss
@@ -16,11 +16,8 @@
     color: var(--body_color);
 
     & > div {
-      position: relative;
-      max-width: 400px;
-      flex-basis: 400px;
+      flex-basis: 350px;
       margin: auto;
-      padding: 20px;
       text-align: left;
 
       .login-form {
